# tienda-react

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 590e5fe890ea_create_place_table.py  fd708cf89b26_actualizar_estructura.py
app/: __init__.py  main.py
app/api/: api.py  deps.py
app/api/endpoints/: places.py
app/core/: config.py
app/crud/: places.py
app/database/: base.py  base_class.py  session.py
app/models/: place.py
app/schemas/: place.py
