[tool.poetry]
name = "tienda-react"
version = "0.1.0"
description = "Backend del proyecto final"
authors = ["esteban <estebandeleon8080@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
