[tool.poetry]
name = "tienda-react"
version = "0.1.0"
description = "Backend del proyecto final"
authors = ["esteban <estebandeleon8080@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = {extras = ["standar"], version = "^0.16.0"}
psycopg2 = "^2.9.2"
SQLAlchemy = "^1.4.28"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
